10.vpc_peering_routing.tf
# data "aws_vpc" "ansible_vpc" {
#   id = "vpc-036e5c5d11bdf83de"
# }

# data "aws_route_table" "ansible_vpc_rt" {
#   subnet_id = "subnet-05597e96c163e70fd"
#   #If subnet_id giving errors use route table id as below
#   #route_table_id = data.aws_route_table.ansible_vpc_rt.id
# }


# Here i have automated the vpc id and subnet id in data_aws_packer_vpc_calling.tf 
#Also, i'm getting the values to get the peering connection both vpcs(terraform created default vpc and aws vpc)

resource "aws_vpc_peering_connection" "ansible-vpc-peering" {
  peer_vpc_id = data.aws_vpc.ansible_vpc.id
  vpc_id      = aws_vpc.default.id
  auto_accept = true
  accepter {
    allow_remote_vpc_dns_resolution = true
  }

  requester {
    allow_remote_vpc_dns_resolution = true
  }

  tags = {
    Name = "Ansible-${var.vpc_name}-Peering"
  }
}

resource "aws_route" "peering-to-ansible-vpc" {
  route_table_id            = aws_route_table.public_rt.id
  destination_cidr_block    = "10.0.0.0/16"
  vpc_peering_connection_id = aws_vpc_peering_connection.ansible-vpc-peering.id
  depends_on                = [aws_route_table.public_rt]
}

resource "aws_route" "peering-from-ansible-vpc" {
  route_table_id            = data.aws_route_table.ansible_vpc_rt.id
  destination_cidr_block    = "10.37.0.0/16"
  vpc_peering_connection_id = aws_vpc_peering_connection.ansible-vpc-peering.id
  depends_on                = [aws_route_table.public_rt]
}
